# python-god-tier-app

./: .dockerignore  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
src/god_tier_app/: __init__.py  app.py  common.py  di.py  services.py  settings.py
tests/: test_god_tier_app.py
